# config-install

./: .pre-commit-config.yaml  makefile  pyproject.toml
kitty/: kitty.conf
src/config_install/: __init__.py  install.py
src/config_install/configs/kitty/: macchiato.conf
src/config_install/configs/oh-my-posh/: zen_config.toml
src/config_install/configs/zsh/: .zshrc
